--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Josefin Sans', sans-serif;
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 
 h1 {
@@ -31,4 +32,9 @@ section {
     border-radius: 5px;
     padding: 10px 40px;
     font-weight: 700;
+}
+
+.top-banner {
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
