--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1 {
     font-size: 50px;
 }
 
-section {
+.flexible-container {
     display: flex;
     padding-bottom: 100px;
 }
@@ -44,4 +44,43 @@ section {
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+h2 {
+    font-size: 40px;
+    text-align: center;
+    color: orange;
+}
+
+.experiance-item {
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    border-radius: 10px;
+    padding-left: 20px;
+    box-shadow: 10px 10px 40px gray;
+}
+
+#web-developer {
+    border-left: 7px solid blue;
+
+}
+
+#baby-developer {
+    border-left: 7px solid rgb(255, 0, 170);
+
+}
+
+.experience-area {
+    background-image: url("images/exp-bg.png");
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-area h3 {
+    color: orange;
+}
+
+footer p {
+    text-align: center;
 }
